tests/errors/syn_method22.java
public class syn_method22 {
public static int[] main ( ) 
}
}